--- a/desktop.ini
+++ b/desktop.ini
@@ -2,3 +2,4 @@
 LocalizedResourceName=@KomodoHub,0
 [LocalizedFileNames]
 op.gif=@op,0
+Screenshot 2025-03-04 074830.png=@Screenshot 2025-03-04 074830.png,0
